--- a/ShooterSwag/bin/AndroidManifest.xml
+++ b/ShooterSwag/bin/AndroidManifest.xml
@@ -10,15 +10,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/duckshooter_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:name="edu.pacificu.cs.duckhunter.DuckHunterMain"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:theme="@style/FullscreenTheme" 
-            android:screenOrientation="sensorLandscape">
+            android:screenOrientation="sensorLandscape"
+            android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
