--- a/ShooterSwag/AndroidManifest.xml
+++ b/ShooterSwag/AndroidManifest.xml
@@ -5,25 +5,31 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
+        android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/duckshooter_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:name="edu.pacificu.cs.duckhunter.DuckHunterMain"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:theme="@style/FullscreenTheme" 
-            android:screenOrientation="sensorLandscape">
+            android:screenOrientation="sensorLandscape"
+            android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="edu.pacificu.cs.duckhunter.GameActivity"
+            android:label="@string/title_activity_game"
+            android:screenOrientation="sensorLandscape"
+            android:theme="@style/FullscreenTheme" >
         </activity>
     </application>
 
